VUZE CHANGELOG
-----------------

2009.11.xx | Vuze 4.3.0.1


2009.11.11 | Vuze 4.3.0.0

FEATURE: Core | Added support for UPnP based offline-downloader services [Parg]
FEATURE: Core | Obfuscated lookups for the DHT to prevent leakage of key values during lookup stage [Parg]
FEATURE: Core | Support copying of .mp3 and .wma files to PSP [Parg]
FEATURE: Core | Implementation of a piece-reordering file manager [Parg]
FEATURE: Core | DHT replication controls [Parg]
FEATURE: Core | Initial pairing support [Parg]
FEATURE: Core | Parse seed/leecher values from subscription text if found [Parg]
FEATURE: Core | Added bloom-filter persistence [Parg]
FEATURE: Core | Support ".utf-8" suffix for keys in .torrent files [TuxPaper] 
FEATURE: Plug | Added download-flags to Download object [Parg]
FEATURE: Plug | Plugin access to subscriptions [Parg]
FEATURE: Plug | Added verified plugins [Parg]
FEATURE: UIvz | Added "Reset Columns" ability to some views (in Column Setup) [TuxPaper]
FEATURE: UIvz | Client now opens to last used static view, or Library by default [TuxPaper]
FEATURE: UI   | Support for switching between carbon and cocoa on OSX [Parg]
FEATURE: UI   | Generic filter support for our tables [Parg]
FEATURE: UI   | Support for showing real SI values rather than just changing units displayed [Parg]
FEATURE: UI   | Advanced menu option for editing http seeds [Parg]

CHANGE: Core  | Remove replicate-on-join from DHT as causing excessive key storage [Parg]
CHANGE: Core  | Roll up subscription warnings when not expanded [Parg]
CHANGE: Core  | Improved IPv6-handshaking and reconnects with other clients (see http://www.azureuswiki.com/index.php/IPv6_compatibility for supported systems) [The 8472]
CHANGE: Core  | Switch back to k-select on OSX [Nolar]
CHANGE: Core  | Reduce CPU used for node-id calculation via MRU cache [Parg]
CHANGE: Core  | Remove LAN transfer totals from data reported to tracker [Parg]
CHANGE: Core  | Implemented port restriction for DHT node id generation [Parg]